ad space above author section. resize h3. resolve text wrap on image

--- a/css/main.css
+++ b/css/main.css
@@ -97,7 +97,7 @@ p {
 	/*font-size: 1.125em;*/
 	/*line-height: 1.667;*/
 	/*font-family: Georgia, serif;*/
-	margin: 0 0 1.5em 0;
+	margin: 0 0 1.5em 5%;
 	/*margin-bottom: 1.5em;*/
 }
 p.byline {
@@ -131,17 +131,17 @@ section.author h3 {
 section.author p {
 	font: .875em/1.714;
 	max-width: 45em;
-	margin-left: 2em;
-	margin-right: 7.5em;
 	margin-top: .5em;
 }
 h2 {
 	font-family: sans-serif;
 	text-align: center;
+	margin-top: 3em;
 	margin-bottom: .75em;
 }
 h3 {
 	font-family: sans-serif;
+	font-size: 135%;
 }
 
 /* --- wire screens and break points --- */
@@ -157,7 +157,6 @@ h3 {
 		margin-left: 1.375em;
 	}
 	figure.headshot {
-		margin-right: 0;
+		/* margin-right: 0; */
 	}
 }
-
